# pickla-api-v1

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.agents/skills/fastapi/: SKILL.md
.agents/skills/pull-request-description/: SKILL.md
.agents/skills/review-code/: SKILL.md
.cursor/rules/: pickla-architecture.mdc  pickla-database.mdc  pickla-docs.mdc  pickla-fastapi-patterns.mdc  pickla-schemas.mdc  pickla-tdd.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
docs/: PRD.md  architecture.md  coding-rules.md  migrations.md  testing.md
src/: main.py
src/shared/configs/: logging.py  settings.py
src/shared/database/: dependencies.py  session.py
src/shared/errors/: error_codes.py  exceptions.py  handlers.py
src/shared/middlewares/: error_handling.py  request_logging.py
tests/: AGENTS.md  conftest.py  test_main.py
tests/shared/configs/: test_logging.py  test_settings.py
tests/shared/errors/: test_exceptions.py  test_handlers.py
tests/shared/middlewares/: test_request_logging.py
